          would cause a deadlock (semaphore would get into a state where
          it was available but waiters were still blocked).
        - calling throw on a coroutine that is waiting for a semaphore will
          no longer make it acquire the semaphore (and thus leak a count).
        - perl's process emulation is now not even theoretically supported
          anymore.
        - new function Coro::Semaphore::wait.
        - use named constants in Coro::Channel (Richard Hundt).
        - directly patch the entersub opcode calling SLF functions (cede,
          transfer and so on). this does speed up context switching, but
          more importanly, it frees us from the hardcoded behaviour of
          entersub, so we might actually be able to return something from
          those functions and atcually create new ones.
        - take advantage of __builtin_frame_address on gcc.
        - expose THX in coroapi (not sure whether this was a wise decision,
          as "threaded" perls are running at half speed anyways).
        - implement execute_slf (schedule-like-function) interface that makes
          it possible to implement schedule-like-functions in XS.
        - use new SLF interface to massively speed up Coro::EV by roughly a
          factor of two.
        - used new SLF interface to massively speed up Coro::Semaphore by a
          factor of three.
        - used new SLF interface to speed up Coro::AIO by roughly a factor of
          four and reduce its memory usage considerably.
        - implement Coro::SemaphoreSet purely in terms of Coro::Semaphore,
          for a nice speedup and vastly more correct behaviour. Also implement
          a new method "sem" to get at the underlying semaphore object.
        - implement Coro::Channel in terms of Coro::Semaphore, for a moderate
          (in comparison) 20-40% speedup.
        - used new SLF interface to reimplement Coro::Signal gaining